--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -34,6 +34,8 @@
         android:layout_marginTop="54dp"
         android:ems="10"
         android:inputType="phone"
+        android:drawableLeft="@drawable/ic_phone_android_black_24dp"
+        android:hint="phone number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSignUpMessage" />
