--- a/app/src/main/res/values-ms/colors.xml
+++ b/app/src/main/res/values-ms/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorAdd">#7bfc40</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorVerified">#00FF00</color>
 
 </resources>
