--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -98,13 +98,42 @@
         app:layout_constraintTop_toBottomOf="@+id/llyrestore" />
 
     <LinearLayout
-        android:id="@+id/llylogout"
+        android:id="@+id/llyfeedback"
         android:layout_width="368dp"
         android:layout_height="49dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lineAfterRestore">
+
+
+        <TextView
+            android:id="@+id/tvfeedback"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Feedback"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/lineAfterFeedback"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/llyfeedback" />
+
+    <LinearLayout
+        android:id="@+id/llylogout"
+        android:layout_width="368dp"
+        android:layout_height="49dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lineAfterFeedback">
 
 
         <TextView
@@ -124,6 +153,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llylogout" />
+
 
 
 </android.support.constraint.ConstraintLayout>
